[package]
name = "space_traders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json"]}
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"